--- a/tripp.html
+++ b/tripp.html
@@ -63,8 +63,8 @@
 
     <script src="https://ajax.aspnetcdn.com/ajax/knockout/knockout-3.4.2.js"></script>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYMXMUc1OXoLOBWuCP20CGes-xhiFXdEg&callback=initMap"
-        async defer></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYMXMUc1OXoLOBWuCP20CGes-xhiFXdEg&callback=initMap"
+        async defer></script> 
     <script src="js/map.js"></script>
     <script src="js/tripp.js"></script>
 </body>
