--- a/tripp.html
+++ b/tripp.html
@@ -2,11 +2,12 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.deep_purple-pink.min.css">
     <link rel="stylesheet" href="css/tripp.css">
     <title>TRIPP</title>
 </head>
@@ -43,7 +44,7 @@
                 <div class="places-info ">
                     <div class="places-info-content mdl-shadow--2dp through mdl-shadow--16dp">
                         <div class="country-content">
-                            Lima, PERU
+                            <div class="country">Lima, PERU</div>
                         </div>
                         <div class="search-content">
                             Search place
