--- a/tripp.html
+++ b/tripp.html
@@ -47,9 +47,20 @@
                             <div class="country">Lima, PERU</div>
                         </div>
                         <div class="search-content">
-                            Search place
+                            <p class="explanation-text"><strong>TRIPP</strong> allows you to search places like cafeterias, bars, hotels, etc and save them to your favorites. Try it!</p>
+                            <!-- Search Form -->
+                            <form action="#" class="search-form">
+                                <div class="search-div mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                                    <input class="mdl-textfield__input" type="text" id="search" pattern="[A-Z,a-z, ]*">
+                                    <label class="mdl-textfield__label" for="search">Search...</label>
+                                    <span class="mdl-textfield__error">Letters and spaces only</span>
+                                </div>
+                                <button data-bind="click: searchContent" class="search-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                                    Let's Go
+                                </button>
+                            </form>
                         </div>
-                        <div class="places-content" data-bind="foreach: arrayPlaces">
+                        <div class="places-content" data-bind="foreach: arrayPlaces, visible: isSearchContentValid">
                             <div class="place-detail">
                                 <div class="place-name">
                                     <span data-bind="text: placeName"></span>
@@ -67,7 +78,7 @@
             </div>
         </main>
     </div>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/knockout/knockout-3.4.2.js"></script>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYMXMUc1OXoLOBWuCP20CGes-xhiFXdEg&callback=initMap" async defer></script>  -->
