--- a/tripp.html
+++ b/tripp.html
@@ -55,7 +55,7 @@
                                     <label class="mdl-textfield__label" for="search">Search...</label>
                                     <span class="mdl-textfield__error">Letters and spaces only</span>
                                 </div>
-                                <button data-bind="click: searchContent" class="search-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                                <button data-bind = "click:gatherPlacesData" class="search-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
                                     Let's Go
                                 </button>
                             </form>
