--- a/tripp.html
+++ b/tripp.html
@@ -72,8 +72,8 @@
                                     <div class="place-name">
                                         <span data-bind="text: placeName"></span>
                                     </div>
-                                    <div class="place-category">
-                                        <span data-bind="text: placeCategory"></span>
+                                    <div class="place-type">
+                                        <span data-bind="text: placeType"></span>
                                     </div>
                                     <div class="place-rating">
                                         <span data-bind="starRating: placeRating"></span>
@@ -91,7 +91,8 @@
     <script src="https://ajax.aspnetcdn.com/ajax/knockout/knockout-3.4.2.js"></script>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYMXMUc1OXoLOBWuCP20CGes-xhiFXdEg&callback=initMap" async defer></script>  -->
-    <!-- <script src="js/map.js"></script> -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYMXMUc1OXoLOBWuCP20CGes-xhiFXdEg&libraries=places"></script>
+    <script src="js/map.js"></script>
     <script src="js/tripp.js"></script>
 </body>
 
