--- a/tripp.html
+++ b/tripp.html
@@ -64,9 +64,9 @@
                             </form>
                         </div>
                         <div class="places-content" data-bind="foreach: arrayPlaces, visible: isSearchContentValid">
-                            <div class="place-detail">
+                            <div data-bind = "click: $root.clickSelectPlace, css : { selectedItem: $data == $root.selectedPlace() }" class="place-detail">
                                 <div class="place-image">
-                                    <img data-bind="attr:{src:placeImage, width:64}" src="" alt="">
+                                    <img data-bind="attr:{src:placeImage, width:64, height:64}" src="" alt="">
                                 </div>
                                 <div class="place-data">
                                     <div class="place-name">
@@ -90,7 +90,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/knockout/knockout-3.4.2.js"></script>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYMXMUc1OXoLOBWuCP20CGes-xhiFXdEg&callback=initMap" async defer></script>  -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYMXMUc1OXoLOBWuCP20CGes-xhiFXdEg&libraries=places"></script>
     <script src="js/map.js"></script>
     <script src="js/tripp.js"></script>
