--- a/tripp.html
+++ b/tripp.html
@@ -20,7 +20,9 @@
         <header class="mdl-layout__header">
             <div class="mdl-layout__header-row">
                 <!-- Title -->
-                <span class="mdl-layout-title">TRIPP</span>
+                <div class="mdl-layout-title">
+                    <img src="img/logo-navbar.png" width="120" alt="Tripp Logo">
+                </div>
                 <!-- Add spacer, to align navigation to the right -->
                 <div class="mdl-layout-spacer"></div>
                 <!-- Navigation. We hide it in small screens. -->
@@ -38,6 +40,33 @@
             </nav>
         </div>
         <main class="mdl-layout__content">
+            <div class="home-content">
+                <div class="logo-content">
+                    <img srcset="img/logo-mobile.png 185w,
+                                 img/logo-desktop.png 350w"
+                        sizes="(max-width: 480px) 150px,
+                                     (min-width: 481px) 300px"
+                        src="img/logo-desktop.png" alt="TRIP LOGO">
+                </div>
+                <div class="destination-content">
+                    <p class="home-text">Where you will TRIPP ?</p>
+                    <form action="" id="form-home">
+                        <div class="mdl-textfield mdl-js-textfield">
+                            <input class="mdl-textfield__input" type="text" id="city">
+                            <label class="mdl-textfield__label" for="city">City... (Eg: Miami)</label>
+                        </div>
+                        <div class="mdl-textfield mdl-js-textfield">
+                            <input class="mdl-textfield__input" type="text" id="country">
+                            <label class="mdl-textfield__label" for="country">Country... (Eg: USA)</label>
+                        </div>
+                        <!-- Accent-colored raised button with ripple -->
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                            Let's Go
+                        </button>
+                    </form>
+                </div>
+            </div>
+            <!--
             <div class="page-content">
                 <div class="map-content">
 
@@ -51,7 +80,7 @@
                             <p data-bind="visible:isSearchContentValid() === false" class="explanation-text"><strong>TRIPP</strong>
                                 allows you to search places like cafeterias, bars, hotels, etc and save them to your
                                 favorites list. Try it!</p>
-                            <!-- Search Form -->
+                            Search Form 
                             <form autocomplete="off" action="#" id="form-search" class="form-search flex-column">
                                 <div id="div-search" class="mdl-textfield mdl-js-textfield">
                                     <input class="mdl-textfield__input" type="text" id="input-search" pattern="[A-Z,a-z, ]*">
@@ -83,14 +112,14 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </main>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/knockout/knockout-3.4.2.js"></script>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYMXMUc1OXoLOBWuCP20CGes-xhiFXdEg&libraries=places"></script>
+    <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYMXMUc1OXoLOBWuCP20CGes-xhiFXdEg&libraries=places"></script> -->
     <script src="js/map.js"></script>
     <script src="js/tripp.js"></script>
 </body>
